# YPIHA

./: README.md  hacs.json
custom_components/presence_graph/: __init__.py  config_flow.py  const.py  coordinator.py  graph_engine.py  sensors.py  services.yaml  switch.py
custom_components/presence_graph/translations/: en.json  fr.json
custom_components/ypiha/: __init__.py  manifest.json
custom_components/ypiha/panel/: index.html
presence_graph/: LICENSE  README.md  hacs.json  pyproject.toml
presence_graph/.github/workflows/: ci.yaml
presence_graph/custom_components/presence_graph/: binary_sensor.py  config_flow.py  diagnostics.py  manifest.json  model.py  utils.py
presence_graph/tests/: conftest.py  test_config_flow.py  test_entities.py  test_estimations.py  test_graph_engine.py
tests/: test_config_flow.py
