[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "presence-graph"
version = "0.1.0"
description = "Home Assistant custom component for presence estimation using a graph model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "voluptuous",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "A", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "custom_components.presence_graph.*"
ignore_errors = true
